--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="container-cards">
         <div class="hab-col-1">
           <section class="card">
-            <img src="assets/img/icones/HTML.png" alt="HTML" class="logo-habilidades" />
+            <img src="assets/img/icones/html.png" alt="HTML" class="logo-habilidades" />
             <p class="card-texto">HTML</p>
           </section>
           
