--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header class="header">
     <nav class="nav-bar">
-      <a href="/" class="logo">Pedro Azevedo</a>
+      <a href="/" class="logo">Pedro Azeved</a>
       <ul class="menu-itens">
         <li><a href="#sobre">Sobre mim</a></li>
         <li><a href="#habilidades">Habilidades</a></li>
