--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header class="header">
     <nav class="nav-bar">
-      <a href="/" class="logo">Pedro Azeved</a>
+      <a href="/" class="logo">Pedro Azevedo</a>
       <ul class="menu-itens">
         <li><a href="#sobre">Sobre mim</a></li>
         <li><a href="#habilidades">Habilidades</a></li>
@@ -29,7 +29,8 @@
       <section class="left">
         <h1 class="inicio-titulo">Pedro Azevedo</h1>
         <h4 class="inicio-subtitulo">Desenvolvedor</h4>
-        <p class="inicio-texto">Olá! Sou um estudante de Ciência da Computação com foco em frontend.</p>
+        <p class="inicio-texto">Estudante de Ciência da Computação na UFBA, apaixonado por tecnologia. Estou aberto a atuar em qualquer área da programação.
+</p>
       </section>
 
       <section class="right">
@@ -41,45 +42,70 @@
     <section class="sobre" id="sobre">
       <h2 class="titulo">Sobre mim</h2>
       <p class="sobre-texto">
-        Meu primeiro contato com a programação ocorreu no início de 2023, quando iniciei um curso pelo YouTube. Após um mês de estudo, descobri meu interesse pelo desenvolvimento web, especialmente com HTML e CSS.
+        Sou estudante de Ciência da Computação pela UFBA (2024–2028) e comecei minha trajetória na programação em 2023. Desde então, venho aprofundando meus conhecimentos em diversas áreas do desenvolvimento de software, com ênfase em desenvolvimento web.
+
+Tenho experiência com HTML, CSS, JavaScript, React, Python e C/C++, além de familiaridade com Git/GitHub, responsividade, lógica de programação e boas práticas de código. Já desenvolvi projetos próprios, como um site de e-commerce e um sistema de convite com formulário integrado.
+
+Estou aberto a oportunidades em qualquer área da programação ou desenvolvimento, com muita disposição para aprender e contribuir.
       </p>
       <h3 class="sobre-texto">Graduação:</h3>
-      <p class="sobre-texto sobre-graduacao">Ciência da Computação (2024-2028) - UFBA</p>
+      <p class="sobre-texto sobre-graduacao">Ciência da Computação (2024-2028) - UFBA (em andamento)</p>
+      <h3 class="sobre-texto"> Cursos:</h3>
+      <p class="sobre-texto sobre-graduacao"> Introdução a programação em C/C++ - Tomorrow UFBA</p>
+      <p class="sobre-texto sobre-graduacao"> Lógica de Programação e Estruturas de Dados - Tomorrow UFBA</p>
+      <p class="sobre-texto sobre-graduacao"> Programação para Web com HTML e CSS - Tomorrow UFBA</p>
+      <p class="sobre-texto sobre-graduacao"> Programação de Computadores com Javascript - Tomorrow UFBA</p>
     </section>
 
     <section class="habilidades" id="habilidades">
       <h2 class="titulo">Habilidades</h2>
 
       <div class="container-cards">
-        <div class="hab-col-1">
-          <section class="card">
-            <img src="assets/img/icones/html.png" alt="HTML" class="logo-habilidades" />
-            <p class="card-texto">HTML</p>
-          </section>
-          
-          <section class="card">
-            <img src="assets/img/icones/css.png" alt="CSS" class="logo-habilidades" />
-            <p class="card-texto">CSS</p>
-          </section>
+  <div class="hab-col-1">
+    <section class="card">
+      <img src="assets/img/icones/html.png" alt="HTML" class="logo-habilidades" />
+      <p class="card-texto">HTML</p>
+    </section>
 
-          <section class="card">
-            <img src="assets/img/icones/javascript.png" alt="JAVASCRIPT" class="logo-habilidades" />
-            <p class="card-texto">JAVASCRIPT</p>
-          </section>
-        </div>
+    <section class="card">
+      <img src="assets/img/icones/css.png" alt="CSS" class="logo-habilidades" />
+      <p class="card-texto">CSS</p>
+    </section>
 
-        <div class="hab-col-2">
-          <section class="card">
-            <img src="assets/img/icones/python.png" alt="Python" class="logo-habilidades" />
-            <p class="card-texto">Python</p>
-          </section>
+    <section class="card">
+      <img src="assets/img/icones/javascript.png" alt="JAVASCRIPT" class="logo-habilidades" />
+      <p class="card-texto">JAVASCRIPT</p>
+    </section>
 
-          <section class="card">
-            <img src="assets/img/icones/figma.png" alt="FIGMA" class="logo-habilidades" />
-            <p class="card-texto">FIGMA</p>
-          </section>
+    <section class="card">
+      <img src="assets/img/icones/c.png" alt="C" class="logo-habilidades" />
+      <p class="card-texto">C</p>
+    </section>
+  </div>
+
+  <div class="hab-col-2">
+    <section class="card">
+      <img src="assets/img/icones/python.png" alt="Python" class="logo-habilidades" />
+      <p class="card-texto">Python</p>
+    </section>
+
+    <section class="card">
+      <img src="assets/img/icones/figma.png" alt="FIGMA" class="logo-habilidades" />
+      <p class="card-texto">FIGMA</p>
+    </section>
+
+    <section class="card">
+      <img src="assets/img/icones/cpp.png" alt="C++" class="logo-habilidades" />
+      <p class="card-texto">C++</p>
+    </section>
+
+    <section class="card">
+      <img src="assets/img/icones/react.png" alt="React" class="logo-habilidades" />
+      <p class="card-texto">React</p>
+    </section>
         </div>
       </div>
+
     </section>
 
     <section id="projetos" style="margin-top: 100px;">
